# lazuli

./: .gitignore  Cargo.toml  README.md  justfile  webgpu-changes.patch
.github/workflows/: wasm-build.yaml
crates/app/: Cargo.toml
crates/app/src/: main.rs  windows.rs
crates/app/src/windows/: control.rs
crates/disks/: Cargo.toml
crates/disks/src/: iso.rs  rvz.rs
crates/gekko/src/: lib.rs
crates/ipl-hle/src/: main.rs
crates/lazuli/: Cargo.toml
crates/lazuli-web/: Cargo.toml  build.rs
crates/lazuli-web/.cargo/: config.toml
crates/lazuli-web/src/: cpu.rs  jit.rs  lib.rs  loader.rs  renderer.rs
crates/lazuli-web/src/hw/: ai.rs  di.rs  dsp.rs  exi.rs  gx.rs  gx_fifo.rs  mi.rs  mod.rs  pi.rs  si.rs  vi.rs
crates/lazuli-web/www/: bootstrap.js  coi-serviceworker.js  cpu-worker.js  index.html
crates/lazuli/src/: lib.rs  system.rs
crates/lazuli/src/system/: bus.rs  di.rs  gx.rs  lazy.rs
crates/modules/: Cargo.toml
crates/modules/src/: lib.rs
crates/ppcint/: Cargo.toml
crates/ppcint/src/: arithmetic.rs  branch.rs  compare.rs  lib.rs  logic.rs  memory.rs  others.rs
crates/ppcir/: Cargo.toml
crates/ppcir/src/: decode.rs  inst.rs  lib.rs
crates/ppcwasm/: Cargo.toml  README.md
crates/ppcwasm/src/: block.rs  builder.rs  lib.rs  lower.rs  offsets.rs
crates/renderer/: Cargo.toml  build.rs
crates/renderer/src/: alloc.rs  blit.rs  clear.rs  lib.rs  push.rs  render.rs
crates/renderer/src/render/: framebuffer.rs  pipeline.rs
crates/renderer/src/render/pipeline/: shader.rs
