[package]
name = "disks"
description = "GameCube/Wii file formats"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lints]
workspace = true

[dependencies]
easyerr.workspace = true
binrw.workspace = true

elf = "0.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
zstd.workspace = true
