[package]
name = "lazuli-web"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
description = "Browser WebAssembly frontend for the Lazuli GameCube emulator"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ppcwasm = { workspace = true }
gekko = { workspace = true }
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "Performance",
    # Used by check_webgpu_support() to probe navigator.gpu
    "Navigator",
    "HtmlCanvasElement",
]

# ── WebGPU rendering backend (wasm32 targets only) ────────────────────────────
# wgpu 27 supports the browser's native WebGPU API when targeting wasm32.
# Adding the "webgpu" feature here enables check_webgpu_support() and lays the
# foundation for porting the `renderer` crate to the browser.  Non-wasm builds
# continue to use their platform-specific backends (Vulkan / Metal / D3D12)
# declared in the `renderer` crate.
[target.'cfg(target_arch = "wasm32")'.dependencies.wgpu]
workspace = true
features = ["webgpu", "wgsl"]

# Disable wasm-opt during wasm-pack builds so that the package can be built
# without a network connection.  Re-enable for distribution builds by removing
# this section or setting `wasm-opt = ["-O3"]`.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[lints]
workspace = true
