[package]
name = "lazuli-web"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
description = "Browser WebAssembly frontend for the Lazuli GameCube emulator"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ppcwasm = { workspace = true }
gekko = { workspace = true }
disks = { workspace = true }
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "Performance",
    # Used by check_webgpu_support() to probe navigator.gpu
    "Navigator",
    "HtmlCanvasElement",
]

# ── WebGPU rendering backend (future) ─────────────────────────────────────────
# Phase 4: add wgpu + renderer wasm32 deps here once renderer is ported to
# wasm32 (wgpu::SurfaceTarget::Canvas).  Until then these deps are omitted
# because renderer has native windowing imports incompatible with wasm32.

# Disable wasm-opt during wasm-pack builds so that the package can be built
# without a network connection.  Re-enable for distribution builds by removing
# this section or setting `wasm-opt = ["-O3"]`.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[lints]
workspace = true
