[package]
name = "lazuli-web"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
description = "Browser WebAssembly frontend for the Lazuli GameCube emulator"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ppcwasm = { workspace = true }
gekko = { workspace = true }
disks = { workspace = true }
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "Performance",
    # Used by check_webgpu_support() to probe navigator.gpu
    "Navigator",
    "HtmlCanvasElement",
]

# ── WebGPU rendering backend (Phase 4) ────────────────────────────────────────
# The renderer crate already guards its background-thread path with
# #[cfg(not(target_arch = "wasm32"))] so it is safe to link on wasm32.
# wgpu's webgpu feature enables wgpu::SurfaceTarget::Canvas support.
[target.'cfg(target_arch = "wasm32")'.dependencies]
renderer = { workspace = true, features = ["webgpu"] }

# Enable wasm-opt -O3 for release builds to shrink the WASM binary and improve
# execution speed.  Disabled for dev builds to keep incremental compile times
# fast.  Remove this section entirely to use wasm-pack's built-in defaults.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[lints]
workspace = true
